# ebics-read

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  interoperability.yml  protocol-security.yml
.github/workflows/: ci.yml
docs/: architecture.md  clean-room-sources.md  clean-room.md  interoperability.md  key-lifecycle.md  protocol-scope.md  provenance.md  scope.md  threat-model.md
src/ebics_read/: __init__.py  backend.py  certificates.py  client.py  errors.py  hev.py  interfaces.py  models.py  orders.py  runtime.py  testing.py  transport.py  xml.py
src/ebicsmit/: __init__.py  client.py  errors.py  hev.py  interfaces.py  models.py  orders.py  policy.py  testing.py  transport.py  xml.py
tests/: test_backend.py  test_certificates.py  test_errors.py  test_hev.py  test_hev_integration.py  test_models.py  test_official_h000_schema.py  test_read_only_boundary.py  test_runtime.py  test_source_boundary.py  test_testing_helpers.py  test_transport.py  test_trust.py  test_xml_security.py
