[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ebicsmit"
version = "0.0.0"
description = "An independent, MIT-licensed, read-only Python client for EBICS 3.0/H005."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bitcoin Austria" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "lxml>=5.3,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "lxml-stubs>=0.5,<1",
  "mypy>=1.15,<3",
  "pip-audit>=2.8,<3",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[project.urls]
Repository = "https://github.com/bitcoinaustria/ebicsmit"
Issues = "https://github.com/bitcoinaustria/ebicsmit/issues"
Security = "https://github.com/bitcoinaustria/ebicsmit/security/advisories/new"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ebicsmit = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=ebicsmit --cov-branch --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ebicsmit"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "PTH", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["ebicsmit"]
mypy_path = "src"
warn_unreachable = true
